@@ -2,6 +2,9 @@ apache2 (2.4.23-3) UNRELEASED; urgency=low
 
   * Fix conffiles that may have got the wrong content during upgrade from
     wheezy to early jessie versions. Closes: #794933
+  * Also restore re-introduced *.load files for mod_ident, mod_imagemap, and
+    mod_cern_meta. These may have gone missing due to dpkg thinking they still
+    belong to apache2.2-common. Reported by Markus Waldeck.
   * Make mod_proxy_html depend on mod_xml2enc.
 
  -- Stefan Fritsch <sf@debian.org>  Wed, 10 Aug 2016 11:25:02 +0200
